# openai_tts_test

./: .gitignore  README.md  pyproject.toml
src/openai_tts_test/: main.py  speech_text.txt
